# Thrust-Control

./: .command_manager.cpp.swp  .command_manager.hpp.swp  .dockerignore  .gitignore  .gitmodules  .startupTest.sh.swp  .thrust_control_node.cpp.swp  .thrust_control_node.hpp.swp  .thrust_control_supervisor.cpp.swn  .thrust_control_supervisor.cpp.swo  .thrust_control_supervisor.cpp.swp  .thrust_control_supervisor.hpp.swo  .thrust_control_supervisor.hpp.swp  CMakeLists.txt  Pwm_Command.cpp  Pwm_Command.hpp  README.md  command_manager.cpp  command_manager.hpp  main.cpp  package.xml  pwm_command.cpp  pwm_command.hpp  rmBuild.sh  runTests.sh  startup.sh  startupTest.sh  thrust_control_node.cpp  thrust_control_node.hpp  thrust_control_supervisor.cpp  thrust_control_supervisor.hpp
include/Command-Interpreter/: .gitignore
include/exported-PID-control/test/: CMakeLists.txt
include/install/: local_setup.sh
include/log/: latest_build
include/thrust_control/: thrust_control_node.hpp  thrust_control_supervisor.hpp
install/: local_setup.sh  setup.sh
install/thrust_control/include/install/: setup.ps1  setup.sh
install/thrust_control/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
install/thrust_control/share/ament_index/resource_index/package_run_dependencies/: thrust_control
install/thrust_control/share/ament_index/resource_index/parent_prefix_path/: thrust_control
install/thrust_control/share/thrust_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/thrust_control/share/thrust_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  thrust_controlConfig.cmake
log/: latest_build
script/: mock_pi_build.sh  pi_build.sh  runTests.sh  startup.sh
script/install/: local_setup.sh  setup.sh
script/log/: latest_build
src/: ThrustControl.cpp  ThrustControl.h  command_interpreter_pointer.cpp  command_interpreter_pointer.hpp  command_queue.cpp  command_queue.hpp  main.cpp  position.cpp  position.hpp  pwm_message_utils.cpp  pwm_message_utils.hpp  sets.hpp  supervisor_command.cpp  supervisor_command.hpp  thrust_control_node.cpp  thrust_control_node.hpp  thrust_control_supervisor.cpp  thrust_control_supervisor.hpp
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/log/: latest_build
tests/: .test_thrust_control_node.cpp.swo  .test_thrust_control_node.cpp.swp  .thrust_control_node.cpp.swp  test_command.cpp  test_command_queue.cpp  test_thrust_control_node.cpp  test_thrust_control_supervisor.cpp
tests/install/: local_setup.sh  setup.sh
tests/log/: latest_build
